text for slides

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<section>
 					<section data-background-video="images/recipe.webm" data-background-color="#ececec">
 						<h1>Recipe Encyclopedia</h1>
-						<p>Serif typefaces tend to be thought of as classic and traditional, whereas sans-serif typefaces are thought of as more modern and contemporary. The fine details of serifs, especially the more delicate and high-contrast designs, don’t always display well on screens.</p>
+						<p>This individual thesis project is rethinking of a new syntax to write recipes. It also address standardized naming convention of recipes and discovery through cross cultural overlaps.</p>
 					</section>
 <!-- 					<section data-background="#87D7D3">
 						<h2>What's the best <em>syntax</em> for recieps</h2>
@@ -207,7 +207,7 @@
 				<section>
 					<section data-background-video="images/lumen.webm" data-background-color="#000">
 							<h1>Connected Shoe</h1>
-							<p>Serif typefaces tend to be thought of as classic and traditional, whereas sans-serif typefaces are thought of as more modern and contemporary. The fine details of serifs, especially the more delicate and high-contrast designs, don’t always display well on screens.</p>
+							<p>This group project on the critical design of a fitness tracker shoe focuses on what behaviour the shoe can induce on the wearer. I was involved in creating the Android app for the connected shoe.</p>
 					</section>
 <!-- 					<section data-background="#87D7D3">
 							<h2>How does a connected shoe behave</h2>
@@ -230,7 +230,7 @@
 				<section>
 					<section data-background-video="images/humans.webm" data-background-color="#A7CACA">
 							<h1>World Fact Book Visualised</h1>
-							<p>Serif typefaces tend to be thought of as classic and traditional, whereas sans-serif typefaces are thought of as more modern and contemporary. The fine details of serifs, especially the more delicate and high-contrast designs, don’t always display well on screens.</p>
+							<p>This individual project attempts to create new mental models of the world by asking questions such as <em>What's the relationship of language and colonised countries</em>, <em>How is Human trafficing, refuges and internally displaced persons connected</em> and <em>Do countries with high GDP have a higher life expectancy.</em></p>
 					</section>
 <!-- 					<section data-background="#87D7D3">
 							<h2>What's the relationship of language and colonised countries</h2>
@@ -254,7 +254,7 @@
 				<section>
 					<section data-background-video="images/dance.webm" data-background-color="#000">
 							<h1>Critical Moment</h1>
-							<p>Serif typefaces tend to be thought of as classic and traditional, whereas sans-serif typefaces are thought of as more modern and contemporary. The fine details of serifs, especially the more delicate and high-contrast designs, don’t always display well on screens.</p>
+							<p>This interactive dance performance experiments with improvising with a machine. This was made in collaboration with Caitlin Sikora and Rucha Patwardhan. A Kinect overhead tracks the position of the dancer and creates an interactive projection.</p>
 					</section>
 <!-- 					<section data-background="#87D7D3">
 							<h2>How does a connected shoe behave</h2>
