--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 				<!-- Example of nested vertical slides -->
 				<section>
-					<section data-background-video="images/recipe.webm" data-background-color="#ececec">
+					<section data-background-video="images/recipe.webm, images/recipe.mp4" data-background-color="#ececec">
 						<h1>Recipe Encyclopedia</h1>
 						<p>This individual thesis project is rethinking of a new syntax to write recipes. It also address standardized naming convention of recipes and discovery through cross cultural overlaps.</p>
 					</section>
@@ -205,7 +205,7 @@
 				</section>
 
 				<section>
-					<section data-background-video="images/lumen.webm" data-background-color="#000">
+					<section data-background-video="images/lumen.webm, images/lumen.mp4" data-background-color="#000">
 							<h1>Connected Shoe</h1>
 							<p>This group project on the critical design of a fitness tracker shoe focuses on what behaviour the shoe can induce on the wearer. I was involved in creating the Android app for the connected shoe.</p>
 					</section>
@@ -228,7 +228,7 @@
 				</section>
 
 				<section>
-					<section data-background-video="images/humans.webm" data-background-color="#A7CACA">
+					<section data-background-video="images/humans.webm, images/humans.mp4" data-background-color="#A7CACA">
 							<h1>World Fact Book Visualised</h1>
 							<p>This individual project attempts to create new mental models of the world by asking questions such as <em>What's the relationship of language and colonised countries</em>, <em>How is Human trafficing, refuges and internally displaced persons connected</em> and <em>Do countries with high GDP have a higher life expectancy.</em></p>
 					</section>
@@ -252,7 +252,7 @@
 
 				
 				<section>
-					<section data-background-video="images/dance.webm" data-background-color="#000">
+					<section data-background-video="images/dance.webm, images/dance.mp4" data-background-color="#000">
 							<h1>Critical Moment</h1>
 							<p>This interactive dance performance experiments with improvising with a machine. This was made in collaboration with Caitlin Sikora and Rucha Patwardhan. A Kinect overhead tracks the position of the dancer and creates an interactive projection.</p>
 					</section>
