--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 				</section>
 				<section>
 					<section data-background="#5E5974">
-							<h1>Thanks ! </h1>
-							<p>Serif typefaces tend to be thought of as classic and traditional, whereas sans-serif typefaces are thought of as more modern and contemporary. The fine details of serifs, especially the more delicate and high-contrast designs, don’t always display well on screens.</p>
+							<h1>Thanks for stopping by ! </h1>
+							<p>You can reach me at jaa575 at nyu edu. </p>
 					</section>
 				</section>
 
